# kicad-autopilot

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/commands/: pcb-constrain.md  pcb-design.md  pcb-optimize.md  pcb-place.md  pcb-route.md
research/: 2026-03-31-01-agent-driven-routing.md
src/: apply_constraints.py  board_analyzer.py  component_placer.py  conflict_analyzer.py  drc_checker.py  kicad_drc.py  kicad_export.py  kicad_import.py  pathfinder.py  placement_scorer.py  placement_sweeper.py  schema.py  sexpr_parser.py  trace_tool.py  visualizer.py
tests/: conftest.py  test_apply_constraints.py  test_board_collection.py  test_conflict_analyzer.py  test_drc_checker.py  test_kicad_export.py  test_kicad_fixtures.py  test_kicad_import.py  test_pathfinder.py  test_placement_scorer.py  test_placement_sweeper.py  test_schema.py  test_sexpr_parser.py  test_visualizer.py
tests/fixtures/: poly_outline_board.kicad_pcb  rotated_board.kicad_pcb  routed_board.kicad_pcb  synthetic_board.kicad_pcb
